# ie0417

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
Investigacion/: README.md
semanas/semana10/Laboratorio10.1/: README.md
semanas/semana10/Laboratorio10.2/: Dockerfile  README.md  contador_compartido.cpp  contador_compartido2  contador_compartido2.cpp  grafico_tiempos.py  productor_consumidor  productor_consumidor.cpp  semaforo  semaforo.cpp  test_run.sh  threads_basic  threads_basic.cpp
semanas/semana11/: README.md
semanas/semana11/Laboratorio11/: .dockerignore  Dockerfile  Makefile  README.md
semanas/semana11/Laboratorio11/files/: buffers.cpp  buffers_asan  buffers_plain  buffers_valgrind  race  race.cpp  race_helgrind  race_plain  race_tsan  suma_vector  suma_vector.cpp
semanas/semana12/: README.md
semanas/semana12/Laboratorio12/: CMakeLists.txt  README.md  calculator.h  test_calculator.cpp
semanas/semana2/: Apuntes_Corregidos_sem2.md  readme.md
semanas/semana2/clase2/: README.md
semanas/semana3/: QuizSIMOVI.md  README.md  apuntes.md
semanas/semana4/: README.md
semanas/semana4/Tarea/: README.md
semanas/semana4/Tarea/docs-doxygen/: annotated.html  classes.html  classhuman_1_1Human-members.html  classhuman_1_1Human.html  classhuman_1_1Human__coll__graph.map  functions.html  (+25 more)
semanas/semana5/: README.md
semanas/semana5/Laboratorios/: README.md
semanas/semana6/Laboratorio/: README.md
semanas/semana6/Laboratorio6.1/: README.md
semanas/semana7/Laboratorio7.2/: README.md
semanas/semana8/: REAME.md
semanas/semana9/: README.md
(+36 files in other folders)
